--- a/.github/workflows/main_ourflymewebapp.yml
+++ b/.github/workflows/main_ourflymewebapp.yml
@@ -33,6 +33,8 @@ jobs:
           pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run tests with pytest
+        run: pytest
       
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
